[package]
name = "config-parse"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
confy = "0.4.0"
serde = {version="1.0.152", features = ["derive"]}
config = "0.13.1"
csv = "1.2"
nom = "7.1.1"
propparse = "0.2.0"
