[package]
name = "config-parse"
version = "2.0.0"
edition = "2021"
description = "A tool to check and extract certain key-values from your config files"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/marcel-baur/config-parse"
repository = "https://github.com/marcel-baur/config-parse"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
confy = "0.4.0"
serde = {version="1.0.152", features = ["derive"]}
config = "0.13.1"
csv = "1.2"
propparse = "0.2.4"
colored = "2.0.0"
